# SparCity

./: .readthedocs.yaml  LICENSE  Makefile  README.md  README.rst  description.md  index.rst  pyproject.toml  setup.py  tox.ini
docs/: conf.py  examples.rst  index.rst  modules.rst  requirements.txt  sparcity.core.rst  sparcity.dataset.data.rst  sparcity.dataset.rst  sparcity.debug_utils.rst  sparcity.dev.rst  sparcity.gaussian_process.rst  sparcity.metrics.rst  sparcity.pipeline.rst  sparcity.random.rst  sparcity.rst  sparcity.sampler.rst
docs/notebooks/: compare.ipynb  oyamadata.ipynb  quadratic_rig.ipynb  quadratic_rs.ipynb
sparcity/: __init__.py
sparcity/core/: __init__.py  _area.py  _coord.py  _generator.py  _gpmodel.py  _subcoord.py  _test_data.py  _training_data.py  _unknown_coord.py
sparcity/dataset/: __init__.py  _loader.py  _quadratic.py
sparcity/dataset/data/: __init__.py
sparcity/debug_utils/: __init__.py  _forget.py  _metric_extensions.py
sparcity/dev/: __init__.py  _checker.py  _numpy_extensions.py
sparcity/gaussian_process/: __init__.py  _kissgp.py
sparcity/metrics/: __init__.py  _absolute_error.py
sparcity/pipeline/: __init__.py  _comparison.py  _init_args.py
sparcity/random/: __init__.py  _random.py  _randomcenter.py
sparcity/sampler/: __init__.py  _random_in_grid.py  _random_sampler.py  _sod.py
