[tool.poetry]
name = "sparcity"
version = "0.1.0"
description = "Sparse estimator for geographical information"
authors = ["yo-aka-gene <yujiokano@keio.jp>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
pandas = "^1.5.1"
scipy = "^1.9.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
tox = "^3.27.1"
flake8 = "^5.0.4"
setuptools = "^65.6.0"
twine = "^4.0.1"
wheel = "^0.38.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
